// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toggletip /> snapshot should display only one toggletip at all time 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    class="md-button-simple-wrapper"
    id="2"
    type="button"
  >
    <span>
      Toggletip 1
    </span>
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    class="md-button-simple-wrapper"
    id="3"
    type="button"
  >
    <span>
      Toggletip 2
    </span>
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
  <button
    class="md-button-simple-wrapper"
    type="button"
  >
    <span>
      Other button
    </span>
  </button>
</div>
`;

exports[`<Toggletip /> snapshot should display only one toggletip at all time 2`] = `
<div>
  <button
    aria-expanded="true"
    aria-haspopup="dialog"
    class="md-button-simple-wrapper"
    id="2"
    type="button"
  >
    <span>
      Toggletip 1
    </span>
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    class="md-button-simple-wrapper"
    id="3"
    type="button"
  >
    <span>
      Toggletip 2
    </span>
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
  <button
    class="md-button-simple-wrapper"
    type="button"
  >
    <span>
      Other button
    </span>
  </button>
  <div
    data-tippy-root=""
    id="tippy-10"
    style="z-index: 9999; position: fixed; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px);"
  >
    <span
      data-focus-scope-start="true"
      hidden=""
    />
    <div
      aria-labelledby="2"
      aria-modal="true"
      class="md-toggletip-wrapper md-modal-container-wrapper"
      data-arrow-orientation="vertical"
      data-color="primary"
      data-elevation="3"
      data-padded="true"
      data-placement="bottom"
      data-round="50"
      role="dialog"
    >
      <p>
        Content 1
      </p>
      <div
        class="md-modal-container-arrow-wrapper"
        data-popper-arrow="true"
        id="arrow3"
        style="position: absolute; left: 0px; transform: translate(5px, 0px);"
      >
        <svg
          aria-hidden="true"
          class="md-modal-arrow-svg"
          data-placement="bottom"
          height="12"
          viewBox="0 0 24 12"
          width="24"
          xmlns="http://www.w3.org/svg/2000"
        >
          <defs>
            <clippath
              id="modal-arrow-cut-stroke-bottom"
            >
              <path
                d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
              />
            </clippath>
          </defs>
          <path
            clip-path="url(#modal-arrow-cut-stroke-bottom)"
            d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
            data-color="primary"
          />
        </svg>
      </div>
    </div>
    <span
      data-focus-scope-end="true"
      hidden=""
    />
  </div>
  <div
    aria-hidden="true"
    class="md-popover-backdrop"
  />
</div>
`;

exports[`<Toggletip /> snapshot should display only one toggletip at all time 3`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    class="md-button-simple-wrapper"
    id="2"
    type="button"
  >
    <span>
      Toggletip 1
    </span>
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
  <button
    aria-expanded="true"
    aria-haspopup="dialog"
    class="md-button-simple-wrapper"
    id="3"
    type="button"
  >
    <span>
      Toggletip 2
    </span>
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
  <button
    class="md-button-simple-wrapper"
    type="button"
  >
    <span>
      Other button
    </span>
  </button>
  <div
    data-tippy-root=""
    id="tippy-11"
    style="z-index: 9999; position: fixed; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px);"
  >
    <span
      data-focus-scope-start="true"
      hidden=""
    />
    <div
      aria-labelledby="3"
      aria-modal="true"
      class="md-toggletip-wrapper md-modal-container-wrapper"
      data-arrow-orientation="vertical"
      data-color="primary"
      data-elevation="3"
      data-padded="true"
      data-placement="bottom"
      data-round="50"
      role="dialog"
    >
      <p>
        Content 2
      </p>
      <div
        class="md-modal-container-arrow-wrapper"
        data-popper-arrow="true"
        id="arrow3"
        style="position: absolute; left: 0px; transform: translate(5px, 0px);"
      >
        <svg
          aria-hidden="true"
          class="md-modal-arrow-svg"
          data-placement="bottom"
          height="12"
          viewBox="0 0 24 12"
          width="24"
          xmlns="http://www.w3.org/svg/2000"
        >
          <defs>
            <clippath
              id="modal-arrow-cut-stroke-bottom"
            >
              <path
                d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
              />
            </clippath>
          </defs>
          <path
            clip-path="url(#modal-arrow-cut-stroke-bottom)"
            d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
            data-color="primary"
          />
        </svg>
      </div>
    </div>
    <span
      data-focus-scope-end="true"
      hidden=""
    />
  </div>
  <div
    aria-hidden="true"
    class="md-popover-backdrop"
  />
</div>
`;

exports[`<Toggletip /> snapshot should display only one toggletip at all time 4`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    class="md-button-simple-wrapper"
    id="2"
    type="button"
  >
    <span>
      Toggletip 1
    </span>
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    class="md-button-simple-wrapper"
    id="3"
    type="button"
  >
    <span>
      Toggletip 2
    </span>
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
  <button
    class="md-button-simple-wrapper"
    type="button"
  >
    <span>
      Other button
    </span>
  </button>
</div>
`;

exports[`<Toggletip /> snapshot should display only one toggletip at all time 5`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    class="md-button-simple-wrapper"
    id="2"
    type="button"
  >
    <span>
      Toggletip 1
    </span>
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    class="md-button-simple-wrapper"
    id="3"
    type="button"
  >
    <span>
      Toggletip 2
    </span>
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
  <button
    class="md-button-simple-wrapper"
    type="button"
  >
    <span>
      Other button
    </span>
  </button>
</div>
`;

exports[`<Toggletip /> snapshot should display only one toggletip at all time 6`] = `
<div>
  <button
    aria-expanded="true"
    aria-haspopup="dialog"
    class="md-button-simple-wrapper"
    id="2"
    type="button"
  >
    <span>
      Toggletip 1
    </span>
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    class="md-button-simple-wrapper"
    id="3"
    type="button"
  >
    <span>
      Toggletip 2
    </span>
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
  <button
    class="md-button-simple-wrapper"
    type="button"
  >
    <span>
      Other button
    </span>
  </button>
  <div
    data-tippy-root=""
    id="tippy-12"
    style="z-index: 9999; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px);"
  >
    <span
      data-focus-scope-start="true"
      hidden=""
    />
    <div
      aria-labelledby="2"
      aria-modal="true"
      class="md-toggletip-wrapper md-modal-container-wrapper"
      data-arrow-orientation="vertical"
      data-color="primary"
      data-elevation="3"
      data-padded="true"
      data-placement="bottom"
      data-round="50"
      role="dialog"
    >
      <p>
        Content 1
      </p>
      <div
        class="md-modal-container-arrow-wrapper"
        data-popper-arrow="true"
        id="arrow3"
        style="position: absolute; left: 0px; transform: translate(5px, 0px);"
      >
        <svg
          aria-hidden="true"
          class="md-modal-arrow-svg"
          data-placement="bottom"
          height="12"
          viewBox="0 0 24 12"
          width="24"
          xmlns="http://www.w3.org/svg/2000"
        >
          <defs>
            <clippath
              id="modal-arrow-cut-stroke-bottom"
            >
              <path
                d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
              />
            </clippath>
          </defs>
          <path
            clip-path="url(#modal-arrow-cut-stroke-bottom)"
            d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
            data-color="primary"
          />
        </svg>
      </div>
    </div>
    <span
      data-focus-scope-end="true"
      hidden=""
    />
  </div>
  <div
    aria-hidden="true"
    class="md-popover-backdrop"
  />
</div>
`;

exports[`<Toggletip /> snapshot should display only one toggletip at all time 7`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    class="md-button-simple-wrapper"
    id="2"
    type="button"
  >
    <span>
      Toggletip 1
    </span>
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
  <button
    aria-expanded="true"
    aria-haspopup="dialog"
    class="md-button-simple-wrapper"
    id="3"
    type="button"
  >
    <span>
      Toggletip 2
    </span>
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
  <button
    class="md-button-simple-wrapper"
    type="button"
  >
    <span>
      Other button
    </span>
  </button>
  <div
    data-tippy-root=""
    id="tippy-13"
    style="z-index: 9999; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px);"
  >
    <span
      data-focus-scope-start="true"
      hidden=""
    />
    <div
      aria-labelledby="3"
      aria-modal="true"
      class="md-toggletip-wrapper md-modal-container-wrapper"
      data-arrow-orientation="vertical"
      data-color="primary"
      data-elevation="3"
      data-padded="true"
      data-placement="bottom"
      data-round="50"
      role="dialog"
    >
      <p>
        Content 2
      </p>
      <div
        class="md-modal-container-arrow-wrapper"
        data-popper-arrow="true"
        id="arrow3"
        style="position: absolute; left: 0px; transform: translate(5px, 0px);"
      >
        <svg
          aria-hidden="true"
          class="md-modal-arrow-svg"
          data-placement="bottom"
          height="12"
          viewBox="0 0 24 12"
          width="24"
          xmlns="http://www.w3.org/svg/2000"
        >
          <defs>
            <clippath
              id="modal-arrow-cut-stroke-bottom"
            >
              <path
                d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
              />
            </clippath>
          </defs>
          <path
            clip-path="url(#modal-arrow-cut-stroke-bottom)"
            d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
            data-color="primary"
          />
        </svg>
      </div>
    </div>
    <span
      data-focus-scope-end="true"
      hidden=""
    />
  </div>
  <div
    aria-hidden="true"
    class="md-popover-backdrop"
  />
</div>
`;

exports[`<Toggletip /> snapshot should display only one toggletip at all time 8`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    class="md-button-simple-wrapper"
    id="2"
    type="button"
  >
    <span>
      Toggletip 1
    </span>
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    class="md-button-simple-wrapper"
    id="3"
    type="button"
  >
    <span>
      Toggletip 2
    </span>
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
  <button
    class="md-button-simple-wrapper"
    type="button"
  >
    <span>
      Other button
    </span>
  </button>
</div>
`;

exports[`<Toggletip /> snapshot should match snapshot 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    id="2"
  >
    Click Me!
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
</div>
`;

exports[`<Toggletip /> snapshot should match snapshot 2`] = `
<div>
  <button
    aria-expanded="true"
    aria-haspopup="dialog"
    id="2"
  >
    Click Me!
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
  <div
    data-tippy-root=""
    id="tippy-1"
    style="z-index: 9999; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px);"
  >
    <span
      data-focus-scope-start="true"
      hidden=""
    />
    <div
      aria-labelledby="2"
      aria-modal="true"
      class="md-toggletip-wrapper md-modal-container-wrapper"
      data-arrow-orientation="vertical"
      data-color="primary"
      data-elevation="3"
      data-padded="true"
      data-placement="bottom"
      data-round="50"
      role="dialog"
    >
      <p>
        Content
      </p>
      <div
        class="md-modal-container-arrow-wrapper"
        data-popper-arrow="true"
        id="arrow3"
        style="position: absolute; left: 0px; transform: translate(5px, 0px);"
      >
        <svg
          aria-hidden="true"
          class="md-modal-arrow-svg"
          data-placement="bottom"
          height="12"
          viewBox="0 0 24 12"
          width="24"
          xmlns="http://www.w3.org/svg/2000"
        >
          <defs>
            <clippath
              id="modal-arrow-cut-stroke-bottom"
            >
              <path
                d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
              />
            </clippath>
          </defs>
          <path
            clip-path="url(#modal-arrow-cut-stroke-bottom)"
            d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
            data-color="primary"
          />
        </svg>
      </div>
    </div>
    <span
      data-focus-scope-end="true"
      hidden=""
    />
  </div>
  <div
    aria-hidden="true"
    class="md-popover-backdrop"
  />
</div>
`;

exports[`<Toggletip /> snapshot should match snapshot with className 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    id="2"
  >
    Click Me!
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
</div>
`;

exports[`<Toggletip /> snapshot should match snapshot with className 2`] = `
<div>
  <button
    aria-expanded="true"
    aria-haspopup="dialog"
    id="2"
  >
    Click Me!
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
  <div
    data-tippy-root=""
    id="tippy-2"
    style="z-index: 9999; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px);"
  >
    <span
      data-focus-scope-start="true"
      hidden=""
    />
    <div
      aria-labelledby="2"
      aria-modal="true"
      class="md-toggletip-wrapper example-class md-modal-container-wrapper"
      data-arrow-orientation="vertical"
      data-color="primary"
      data-elevation="3"
      data-padded="true"
      data-placement="bottom"
      data-round="50"
      role="dialog"
    >
      <p>
        Content
      </p>
      <div
        class="md-modal-container-arrow-wrapper"
        data-popper-arrow="true"
        id="arrow3"
        style="position: absolute; left: 0px; transform: translate(5px, 0px);"
      >
        <svg
          aria-hidden="true"
          class="md-modal-arrow-svg"
          data-placement="bottom"
          height="12"
          viewBox="0 0 24 12"
          width="24"
          xmlns="http://www.w3.org/svg/2000"
        >
          <defs>
            <clippath
              id="modal-arrow-cut-stroke-bottom"
            >
              <path
                d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
              />
            </clippath>
          </defs>
          <path
            clip-path="url(#modal-arrow-cut-stroke-bottom)"
            d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
            data-color="primary"
          />
        </svg>
      </div>
    </div>
    <span
      data-focus-scope-end="true"
      hidden=""
    />
  </div>
  <div
    aria-hidden="true"
    class="md-popover-backdrop"
  />
</div>
`;

exports[`<Toggletip /> snapshot should match snapshot with color 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    id="2"
  >
    Click Me!
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
</div>
`;

exports[`<Toggletip /> snapshot should match snapshot with color 2`] = `
<div>
  <button
    aria-expanded="true"
    aria-haspopup="dialog"
    id="2"
  >
    Click Me!
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
  <div
    data-tippy-root=""
    id="tippy-5"
    style="z-index: 9999; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px);"
  >
    <span
      data-focus-scope-start="true"
      hidden=""
    />
    <div
      aria-labelledby="2"
      aria-modal="true"
      class="md-toggletip-wrapper md-modal-container-wrapper"
      data-arrow-orientation="vertical"
      data-color="tertiary"
      data-elevation="3"
      data-padded="true"
      data-placement="bottom"
      data-round="50"
      role="dialog"
    >
      <p>
        Content
      </p>
      <div
        class="md-modal-container-arrow-wrapper"
        data-popper-arrow="true"
        id="arrow3"
        style="position: absolute; left: 0px; transform: translate(5px, 0px);"
      >
        <svg
          aria-hidden="true"
          class="md-modal-arrow-svg"
          data-placement="bottom"
          height="12"
          viewBox="0 0 24 12"
          width="24"
          xmlns="http://www.w3.org/svg/2000"
        >
          <defs>
            <clippath
              id="modal-arrow-cut-stroke-bottom"
            >
              <path
                d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
              />
            </clippath>
          </defs>
          <path
            clip-path="url(#modal-arrow-cut-stroke-bottom)"
            d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
            data-color="tertiary"
          />
        </svg>
      </div>
    </div>
    <span
      data-focus-scope-end="true"
      hidden=""
    />
  </div>
  <div
    aria-hidden="true"
    class="md-popover-backdrop"
  />
</div>
`;

exports[`<Toggletip /> snapshot should match snapshot with id 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    id="2"
  >
    Click Me!
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
</div>
`;

exports[`<Toggletip /> snapshot should match snapshot with id 2`] = `
<div>
  <button
    aria-expanded="true"
    aria-haspopup="dialog"
    id="2"
  >
    Click Me!
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
  <div
    data-tippy-root=""
    id="tippy-3"
    style="z-index: 9999; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px);"
  >
    <span
      data-focus-scope-start="true"
      hidden=""
    />
    <div
      aria-labelledby="2"
      aria-modal="true"
      class="md-toggletip-wrapper md-modal-container-wrapper"
      data-arrow-orientation="vertical"
      data-color="primary"
      data-elevation="3"
      data-padded="true"
      data-placement="bottom"
      data-round="50"
      id="example-id"
      role="dialog"
    >
      <p>
        Content
      </p>
      <div
        class="md-modal-container-arrow-wrapper"
        data-popper-arrow="true"
        id="arrow3"
        style="position: absolute; left: 0px; transform: translate(5px, 0px);"
      >
        <svg
          aria-hidden="true"
          class="md-modal-arrow-svg"
          data-placement="bottom"
          height="12"
          viewBox="0 0 24 12"
          width="24"
          xmlns="http://www.w3.org/svg/2000"
        >
          <defs>
            <clippath
              id="modal-arrow-cut-stroke-bottom"
            >
              <path
                d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
              />
            </clippath>
          </defs>
          <path
            clip-path="url(#modal-arrow-cut-stroke-bottom)"
            d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
            data-color="primary"
          />
        </svg>
      </div>
    </div>
    <span
      data-focus-scope-end="true"
      hidden=""
    />
  </div>
  <div
    aria-hidden="true"
    class="md-popover-backdrop"
  />
</div>
`;

exports[`<Toggletip /> snapshot should match snapshot with offsetDistance 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    id="2"
  >
    Click Me!
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
</div>
`;

exports[`<Toggletip /> snapshot should match snapshot with offsetDistance 2`] = `
<div>
  <button
    aria-expanded="true"
    aria-haspopup="dialog"
    id="2"
  >
    Click Me!
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
  <div
    data-tippy-root=""
    id="tippy-8"
    style="z-index: 9999; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px);"
  >
    <span
      data-focus-scope-start="true"
      hidden=""
    />
    <div
      aria-labelledby="2"
      aria-modal="true"
      class="md-toggletip-wrapper md-modal-container-wrapper"
      data-arrow-orientation="vertical"
      data-color="primary"
      data-elevation="3"
      data-padded="true"
      data-placement="bottom"
      data-round="50"
      role="dialog"
    >
      <p>
        Content
      </p>
      <div
        class="md-modal-container-arrow-wrapper"
        data-popper-arrow="true"
        id="arrow3"
        style="position: absolute; left: 0px; transform: translate(5px, 0px);"
      >
        <svg
          aria-hidden="true"
          class="md-modal-arrow-svg"
          data-placement="bottom"
          height="12"
          viewBox="0 0 24 12"
          width="24"
          xmlns="http://www.w3.org/svg/2000"
        >
          <defs>
            <clippath
              id="modal-arrow-cut-stroke-bottom"
            >
              <path
                d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
              />
            </clippath>
          </defs>
          <path
            clip-path="url(#modal-arrow-cut-stroke-bottom)"
            d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
            data-color="primary"
          />
        </svg>
      </div>
    </div>
    <span
      data-focus-scope-end="true"
      hidden=""
    />
  </div>
  <div
    aria-hidden="true"
    class="md-popover-backdrop"
  />
</div>
`;

exports[`<Toggletip /> snapshot should match snapshot with offsetSkidding 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    id="2"
  >
    Click Me!
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
</div>
`;

exports[`<Toggletip /> snapshot should match snapshot with offsetSkidding 2`] = `
<div>
  <button
    aria-expanded="true"
    aria-haspopup="dialog"
    id="2"
  >
    Click Me!
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
  <div
    data-tippy-root=""
    id="tippy-7"
    style="z-index: 9999; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px);"
  >
    <span
      data-focus-scope-start="true"
      hidden=""
    />
    <div
      aria-labelledby="2"
      aria-modal="true"
      class="md-toggletip-wrapper md-modal-container-wrapper"
      data-arrow-orientation="vertical"
      data-color="primary"
      data-elevation="3"
      data-padded="true"
      data-placement="bottom"
      data-round="50"
      role="dialog"
    >
      <p>
        Content
      </p>
      <div
        class="md-modal-container-arrow-wrapper"
        data-popper-arrow="true"
        id="arrow3"
        style="position: absolute; left: 0px; transform: translate(5px, 0px);"
      >
        <svg
          aria-hidden="true"
          class="md-modal-arrow-svg"
          data-placement="bottom"
          height="12"
          viewBox="0 0 24 12"
          width="24"
          xmlns="http://www.w3.org/svg/2000"
        >
          <defs>
            <clippath
              id="modal-arrow-cut-stroke-bottom"
            >
              <path
                d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
              />
            </clippath>
          </defs>
          <path
            clip-path="url(#modal-arrow-cut-stroke-bottom)"
            d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
            data-color="primary"
          />
        </svg>
      </div>
    </div>
    <span
      data-focus-scope-end="true"
      hidden=""
    />
  </div>
  <div
    aria-hidden="true"
    class="md-popover-backdrop"
  />
</div>
`;

exports[`<Toggletip /> snapshot should match snapshot with offsetSkidding and offsetDistance 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    id="2"
  >
    Click Me!
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
</div>
`;

exports[`<Toggletip /> snapshot should match snapshot with offsetSkidding and offsetDistance 2`] = `
<div>
  <button
    aria-expanded="true"
    aria-haspopup="dialog"
    id="2"
  >
    Click Me!
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
  <div
    data-tippy-root=""
    id="tippy-9"
    style="z-index: 9999; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px);"
  >
    <span
      data-focus-scope-start="true"
      hidden=""
    />
    <div
      aria-labelledby="2"
      aria-modal="true"
      class="md-toggletip-wrapper md-modal-container-wrapper"
      data-arrow-orientation="vertical"
      data-color="primary"
      data-elevation="3"
      data-padded="true"
      data-placement="bottom"
      data-round="50"
      role="dialog"
    >
      <p>
        Content
      </p>
      <div
        class="md-modal-container-arrow-wrapper"
        data-popper-arrow="true"
        id="arrow3"
        style="position: absolute; left: 0px; transform: translate(5px, 0px);"
      >
        <svg
          aria-hidden="true"
          class="md-modal-arrow-svg"
          data-placement="bottom"
          height="12"
          viewBox="0 0 24 12"
          width="24"
          xmlns="http://www.w3.org/svg/2000"
        >
          <defs>
            <clippath
              id="modal-arrow-cut-stroke-bottom"
            >
              <path
                d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
              />
            </clippath>
          </defs>
          <path
            clip-path="url(#modal-arrow-cut-stroke-bottom)"
            d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
            data-color="primary"
          />
        </svg>
      </div>
    </div>
    <span
      data-focus-scope-end="true"
      hidden=""
    />
  </div>
  <div
    aria-hidden="true"
    class="md-popover-backdrop"
  />
</div>
`;

exports[`<Toggletip /> snapshot should match snapshot with strategy = fixed 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    id="2"
  >
    Click Me!
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
</div>
`;

exports[`<Toggletip /> snapshot should match snapshot with strategy = fixed 2`] = `
<div>
  <button
    aria-expanded="true"
    aria-haspopup="dialog"
    id="2"
  >
    Click Me!
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
  <div
    data-tippy-root=""
    id="tippy-6"
    style="z-index: 9999; position: fixed; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px);"
  >
    <span
      data-focus-scope-start="true"
      hidden=""
    />
    <div
      aria-labelledby="2"
      aria-modal="true"
      class="md-toggletip-wrapper md-modal-container-wrapper"
      data-arrow-orientation="vertical"
      data-color="primary"
      data-elevation="3"
      data-padded="true"
      data-placement="bottom"
      data-round="50"
      role="dialog"
    >
      <p>
        Content
      </p>
      <div
        class="md-modal-container-arrow-wrapper"
        data-popper-arrow="true"
        id="arrow3"
        style="position: absolute; left: 0px; transform: translate(5px, 0px);"
      >
        <svg
          aria-hidden="true"
          class="md-modal-arrow-svg"
          data-placement="bottom"
          height="12"
          viewBox="0 0 24 12"
          width="24"
          xmlns="http://www.w3.org/svg/2000"
        >
          <defs>
            <clippath
              id="modal-arrow-cut-stroke-bottom"
            >
              <path
                d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
              />
            </clippath>
          </defs>
          <path
            clip-path="url(#modal-arrow-cut-stroke-bottom)"
            d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
            data-color="primary"
          />
        </svg>
      </div>
    </div>
    <span
      data-focus-scope-end="true"
      hidden=""
    />
  </div>
  <div
    aria-hidden="true"
    class="md-popover-backdrop"
  />
</div>
`;

exports[`<Toggletip /> snapshot should match snapshot with style 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    id="2"
  >
    Click Me!
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
</div>
`;

exports[`<Toggletip /> snapshot should match snapshot with style 2`] = `
<div>
  <button
    aria-expanded="true"
    aria-haspopup="dialog"
    id="2"
  >
    Click Me!
  </button>
  <div
    class="md-screen-reader-announcer-wrapper"
    data-testid="screen-reader-announcer"
    style="clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; width: 1px; white-space: nowrap;"
  />
  <div
    data-tippy-root=""
    id="tippy-4"
    style="z-index: 9999; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px);"
  >
    <span
      data-focus-scope-start="true"
      hidden=""
    />
    <div
      aria-labelledby="2"
      aria-modal="true"
      class="md-toggletip-wrapper md-modal-container-wrapper"
      data-arrow-orientation="vertical"
      data-color="primary"
      data-elevation="3"
      data-padded="true"
      data-placement="bottom"
      data-round="50"
      role="dialog"
      style="color: pink;"
    >
      <p>
        Content
      </p>
      <div
        class="md-modal-container-arrow-wrapper"
        data-popper-arrow="true"
        id="arrow3"
        style="position: absolute; left: 0px; transform: translate(5px, 0px);"
      >
        <svg
          aria-hidden="true"
          class="md-modal-arrow-svg"
          data-placement="bottom"
          height="12"
          viewBox="0 0 24 12"
          width="24"
          xmlns="http://www.w3.org/svg/2000"
        >
          <defs>
            <clippath
              id="modal-arrow-cut-stroke-bottom"
            >
              <path
                d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
              />
            </clippath>
          </defs>
          <path
            clip-path="url(#modal-arrow-cut-stroke-bottom)"
            d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
            data-color="primary"
          />
        </svg>
      </div>
    </div>
    <span
      data-focus-scope-end="true"
      hidden=""
    />
  </div>
  <div
    aria-hidden="true"
    class="md-popover-backdrop"
  />
</div>
`;
